experiement_output/error_log/nondex-Mindera-gradle-slack-plugin.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:3: error: package com.google.gson does not exist
import com.google.gson.JsonArray;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:4: error: package com.google.gson does not exist
import com.google.gson.JsonObject;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:3: error: package com.google.gson does not exist
import com.google.gson.JsonArray;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:4: error: package com.google.gson does not exist
import com.google.gson.JsonObject;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:5: error: package com.google.gson does not exist
import com.google.gson.JsonPrimitive;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:35: error: cannot find symbol
    private JsonArray prepareFields() {
            ^
  symbol:   class JsonArray
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:94: error: cannot find symbol
    public JsonObject toJson() {
           ^
  symbol:   class JsonObject
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:39: error: cannot find symbol
    private JsonArray prepareMarkdown() {
            ^
  symbol:   class JsonArray
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:66: error: cannot find symbol
    public JsonObject toJson() {
           ^
  symbol:   class JsonObject
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:6: error: package com.google.gson does not exist
import com.google.gson.JsonArray;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:7: error: package com.google.gson does not exist
import com.google.gson.JsonObject;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:18: error: cannot find symbol
    private JsonObject slackMessage = new JsonObject();
            ^
  symbol:   class JsonObject
  location: class SlackMessage
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:63: error: cannot find symbol
    public JsonObject prepare() {
           ^
  symbol:   class JsonObject
  location: class SlackMessage
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:97: error: cannot find symbol
    private JsonArray prepareAttach() {
            ^
  symbol:   class JsonArray
  location: class SlackMessage
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackApi.java:11: error: package com.google.gson does not exist
import com.google.gson.JsonObject;
                      ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackApi.java:51: error: cannot find symbol
    private String send(JsonObject message) {
                        ^
  symbol:   class JsonObject
  location: class SlackApi
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:36: error: cannot find symbol
        JsonArray data = new JsonArray();
        ^
  symbol:   class JsonArray
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:36: error: cannot find symbol
        JsonArray data = new JsonArray();
                             ^
  symbol:   class JsonArray
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:95: error: cannot find symbol
        JsonObject data = new JsonObject();
        ^
  symbol:   class JsonObject
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackAttachment.java:95: error: cannot find symbol
        JsonObject data = new JsonObject();
                              ^
  symbol:   class JsonObject
  location: class SlackAttachment
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:40: error: cannot find symbol
        JsonArray data = new JsonArray();
        ^
  symbol:   class JsonArray
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:40: error: cannot find symbol
        JsonArray data = new JsonArray();
                             ^
  symbol:   class JsonArray
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:42: error: cannot find symbol
            data.add(new JsonPrimitive(item));
                         ^
  symbol:   class JsonPrimitive
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:67: error: cannot find symbol
        JsonObject data = new JsonObject();
        ^
  symbol:   class JsonObject
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackField.java:67: error: cannot find symbol
        JsonObject data = new JsonObject();
                              ^
  symbol:   class JsonObject
  location: class SlackField
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:18: error: cannot find symbol
    private JsonObject slackMessage = new JsonObject();
                                          ^
  symbol:   class JsonObject
  location: class SlackMessage
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:98: error: cannot find symbol
        JsonArray attachs = new JsonArray();
        ^
  symbol:   class JsonArray
  location: class SlackMessage
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1397/wd/NonDex-plugin-test/github.com/Mindera/gradle-slack-plugin/src/main/java/net/gpedro/integrations/slack/SlackMessage.java:98: error: cannot find symbol
        JsonArray attachs = new JsonArray();
                                ^
  symbol:   class JsonArray
  location: class SlackMessage
28 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 19s
